fixing text alignment issues

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -105,6 +105,7 @@ h2 span {
   color: #dfdfdf;
   font-family: 'nobileregular', sans-serif;
   font-weight: bold;
+  text-align: left;
 }
 
 ::selection {
